fix: carousel title underline on mobile view

--- a/components/Carousel/carousel.module.css
+++ b/components/Carousel/carousel.module.css
@@ -1,6 +1,6 @@
 .buttonCarouselContainer {
   display: flex;
-  padding: 1rem;
+  padding: 0.75rem;
 }
 
 .carousel {
@@ -10,9 +10,13 @@
 
 .carouselTitle {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   text-align: center;
   padding-top: 1rem;
+}
+
+.carouselTitleUnderline {
+  margin: 0 1.5rem;
 }
 
 .inner {
@@ -22,4 +26,14 @@
 .carouselItem {
   text-align: center;
   transition: 1s;
+}
+
+@media (min-width: theme(screens[surfaceDuo])) {
+  .carouselTitle {
+    font-size: 1.5rem;
+  }
+
+  .carouselTitleUnderline {
+    margin: 0 3rem;
+  }
 }
